--- a/knn.ipynb
+++ b/knn.ipynb
@@ -235,7 +235,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Your Answer**: *fill this in.*\n",
+    "**Your Answer**: \n",
+    "- An image in test set is much different from lots of images in the train set. This image also could be classified easily.\n",
+    "- A special example of train, which varies a lot with images in test set.\n",
+    "\n",
     "\n"
    ]
   },
