--- a/softmax.ipynb
+++ b/softmax.ipynb
@@ -21,9 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from __future__ import print_function\n",
@@ -48,9 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -77,6 +73,8 @@
     "    # Load the raw Fashion_mnist data\n",
     "    X_train, y_train = mnist_reader.load_mnist('MS325/datasets/fashion_mnist/data/fashion', kind='train')\n",
     "    X_test, y_test = mnist_reader.load_mnist('MS325/datasets/fashion_mnist/data/fashion', kind='t10k')\n",
+    "    X_train = X_train.astype('float64')\n",
+    "    X_test = X_test.astype('float64')\n",
     "    \n",
     "    # subsample the data\n",
     "    mask = list(range(num_training, num_training + num_validation))\n",
@@ -138,20 +136,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +=: 'float' and 'NoneType'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-f808f7c46197>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;31m# Generate a random softmax weight matrix and use it to compute the loss.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mW\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m785\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;36m0.0001\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[0mloss\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrad\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msoftmax_loss_naive\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mW\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_dev\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_dev\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;31m# As a rough sanity check, our loss should be something close to -log(0.1).\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m/home/timemachine/code/Deep Learning/assignment1/MS325/classifiers/softmax.py\u001b[0m in \u001b[0;36msoftmax_loss_naive\u001b[1;34m(W, X, y, reg)\u001b[0m\n\u001b[0;32m     34\u001b[0m     \u001b[0mscores\u001b[0m \u001b[1;33m=\u001b[0m  \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m     \u001b[0mshift_scores\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m             \u001b[1;31m# simplify your calculations\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 36\u001b[1;33m     \u001b[0mloss\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     37\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mW\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m         \u001b[0my_pred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +=: 'float' and 'NoneType'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 2.421829\n",
+      "sanity check: 2.302585\n"
      ]
     }
    ],
@@ -184,11 +176,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numerical: -2.104786 analytic: -2104.785768, relative error: 9.980020e-01\n",
+      "numerical: 13.629845 analytic: 13629.845151, relative error: 9.980020e-01\n",
+      "numerical: 0.128649 analytic: 128.648438, relative error: 9.980020e-01\n",
+      "numerical: 2.238893 analytic: 2238.892612, relative error: 9.980020e-01\n",
+      "numerical: 8.973123 analytic: 8973.122072, relative error: 9.980020e-01\n",
+      "numerical: -0.554488 analytic: -554.487377, relative error: 9.980020e-01\n",
+      "numerical: 11.509663 analytic: 11509.663189, relative error: 9.980020e-01\n",
+      "numerical: 0.003082 analytic: 3.082247, relative error: 9.980020e-01\n",
+      "numerical: 9.482114 analytic: 9482.113651, relative error: 9.980020e-01\n",
+      "numerical: -2.901243 analytic: -2901.242748, relative error: 9.980020e-01\n",
+      "numerical: -0.397632 analytic: -399.331289, relative error: 9.980105e-01\n",
+      "numerical: -1.673668 analytic: -1675.040968, relative error: 9.980036e-01\n",
+      "numerical: -1.211669 analytic: -1194.732355, relative error: 9.979737e-01\n",
+      "numerical: 1.754599 analytic: 1754.074738, relative error: 9.980014e-01\n",
+      "numerical: 0.484824 analytic: 485.108631, relative error: 9.980032e-01\n",
+      "numerical: 5.271565 analytic: 5268.998693, relative error: 9.980010e-01\n",
+      "numerical: 3.285967 analytic: 3292.139164, relative error: 9.980057e-01\n",
+      "numerical: -4.480126 analytic: -4482.770721, relative error: 9.980032e-01\n",
+      "numerical: -5.439615 analytic: -5438.248401, relative error: 9.980015e-01\n",
+      "numerical: 6.390651 analytic: 6386.530238, relative error: 9.980007e-01\n"
+     ]
+    }
+   ],
    "source": [
     "# Complete the implementation of softmax_loss_naive and implement a (naive)\n",
     "# version of the gradient that uses nested loops.\n",
@@ -208,11 +225,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "naive loss: 2.421829e+00 computed in 0.189776s\n",
+      "vectorized loss: 2.421829e+00 computed in 0.004034s\n",
+      "Loss difference: 0.000000\n",
+      "Gradient difference: 0.000000\n"
+     ]
+    }
+   ],
    "source": [
     "# Now that we have a naive implementation of the softmax loss function and its gradient,\n",
     "# implement a vectorized version in softmax_loss_vectorized.\n",
@@ -238,11 +264,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-6-e61a8092d0c8>, line 21)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-e61a8092d0c8>\"\u001b[0;36m, line \u001b[0;32m21\u001b[0m\n\u001b[0;31m    train =\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Use the validation set to tune hyperparameters (regularization strength and\n",
     "# learning rate). You should experiment with different ranges for the learning\n",
@@ -289,9 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# evaluate on test set\n",
@@ -304,9 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Visualize the learned weights for each class\n",
@@ -329,9 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
